--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* CSS BY BRENDAN STEWART */
+/* CSS BY BRENDAN STEWART*/
 
 /* IMPORTED FONTS */
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kavoon&display=swap");
@@ -77,7 +77,7 @@ body {
   color: var(--white);
 }
 
-#content {
+body > div {
   position: absolute;
   top: 0;
   left: 50%;
@@ -172,7 +172,7 @@ h2{
   font-size: 2em;
 }
 
-#our-services h2 {
+section:first-of-type h2 {
   margin-bottom: 0px;
   font-size: 2em;
 }
@@ -212,22 +212,28 @@ article {
   padding: 30px 30px 20px 20px;
 }
 
-#why-choose-us {
+main > section:nth-of-type(2) {
   background: var(--pink);
   height: 320px;
   width: 110%;
   margin-left: -5%;
 }
 
-#why-choose-us h2 {
+main > section:nth-of-type(2) h2 {
   padding-top: 15px;
   padding-left: 20px;
 }
 
-#why-choose-us-options h4 {
+main > section:nth-of-type(3) h2 {
+  padding-top: 15px;
+}
+
+
+main > section:nth-of-type(2) h4 {
   margin-top: 0;
 }
-#why-choose-us-options {
+
+main > section:nth-of-type(2) > article {
   display: flex;
   flex-wrap: wrap;
   align-items: center;  
@@ -238,7 +244,7 @@ article {
   justify-content: space-evenly;
 }
 
-.why-choose-option {
+main > section:nth-of-type(2) > article div {
   width: 48%;
   padding: 20px;
   height: 110px;
@@ -251,51 +257,46 @@ article {
   text-align: center;
 }
 
-#why-choose-option-approach {
+main > section:nth-of-type(2) > article div:first-child {
   background: var(--teal);
 }
 
-#why-choose-option-results {
+main > section:nth-of-type(2) > article div:nth-child(2) {
   background: var(--lavender);
 }
 
-#why-choose-option-environment {
+main > section:nth-of-type(2) > article div:nth-child(3) {
   background: var(--yellow);
 }
 
-#why-choose-option-flexibility {
+main > section:nth-of-type(2) > article div:nth-child(4) {
   background: var(--white);
 }
 
-#one-on-one-pricing{
+section:nth-of-type(3) h3:first-of-type {
   margin-top: -20px;
 }
 
-#prices h2 {
+section:nth-of-type(3) h3 {
   margin-top: 15px;
 }
 
-#pricing-tables{
+section:nth-of-type(3) > section {
   margin-top: 30px;
 }
 
-#one-on-one-pricing-table,
-#group-pricing-table,
-#workshops-pricing-table,
-#courses-pricing-table {
+section #services-workshops {
+  margin-top: 40px;
+}
+
+table {
   width: 70%;
   border-collapse: collapse;
   margin: 10px auto;
 }
 
-#one-on-one-pricing-table th,
-#one-on-one-pricing-table td,
-#group-pricing-table th,
-#group-pricing-table td,
-#workshops-pricing-table th,
-#workshops-pricing-table td,
-#courses-pricing-table th,
-#courses-pricing-table td {
+table th,
+table td {
   border: 3px solid var(--yellow);
   padding: 20px 15px;
   text-align: center;
@@ -303,15 +304,12 @@ article {
   background: var(--white)
 }
 
-#one-on-one-pricing-table th,
-#group-pricing-table th,
-#workshops-pricing-table th,
-#courses-pricing-table th {
+table th {
   background: var(--yellow);
   font-weight: bold;
 }
 
-#take-the-first-step {
+main > section:nth-of-type(4) {
   background: var(--pink);
   height: 270px;
   width: 110%;
@@ -319,17 +317,25 @@ article {
   padding: 0px 20px 0px 20px;
 }
 
-#take-the-first-step h2 {
+main > section:nth-of-type(4) {
+  background: var(--pink);
+  height: 270px;
+  width: 110%;
+  margin-left: -5%;
+  padding: 0px 20px 0px 20px;
+}
+
+main > section:nth-of-type(4) h2 {
   padding-top: 12px;
 }
 
-#take-the-first-step p {
+main > section:nth-of-type(4) p {
   margin-top: 10px;
   line-height: 1.5;
 }
 
 
-#schedule-now-button{
+main > section:nth-of-type(4) button {
   margin-top: 10px;
   border-radius: 20px;
   box-shadow: 2px 8px 3px rgb(0, 0, 0);
